# dabmpi

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  Readme.md  Readme.txt  pyproject.toml  pytest.ini
.github/workflows/: pylint.yml  python-tests.yml
data/: DABConfigFile  DABConfigFileCristina  DABConfigFilePressure  DABNonSeparable  input.hsrm5_5.05_Ipr225m_fixb  input.xml  input.yaml  param_config.xml  param_config.yaml  param_config_3_periods.xml  param_config_3_periods.yaml  param_config_pressure.xml  param_config_pressure.yaml  param_config_tj2like.xml  param_config_tj2like.yaml  param_config_w7x.xml  param_config_w7x.yaml  param_config_w7x_15.xml  param_config_w7x_15.yaml  param_config_w7x_2015.xml  param_config_w7x_2015.yaml  param_config_w7x_30.xml  param_config_w7x_30.yaml  param_config_w7x_50.xml  param_config_w7x_50.yaml  param_config_w7x_pressure.xml  param_config_w7x_pressure.yaml  param_cristina.xml  param_cristina.yaml  param_non_separable.xml  param_non_separable.yaml
doc/: README
src/: CristinaData.py  NonSeparableData.py  Parameter.py  ParameterVMEC.py  ProblemBase.py  ProblemCristina.py  ProblemFusion.py  ProblemNonSeparable.py  Slave.py  SolutionBase.py  SolutionCristina.py  SolutionFusion.py  SolutionNonSeparable.py  SolutionsQueue.py  SolverBase.py  SolverDAB.py  SolverSA.py  Utils.py  VMECData.py  VMECProcess.py  Worker.py  disop.py
src/core/: __init__.py  comms.py  enums.py  file_utils.py  logging.py  matrix.py  runtime.py
src/dabmpi/: __init__.py  __main__.py  cli.py
src/data/: CristinaData.py  NonSeparableData.py  Parameter.py  ParameterVMEC.py  VMECData.py  VMECProcess.py
src/extra/: bootstrap.py  create_modes.py  remote_bootstrap.py
src/problems/: ProblemBase.py  ProblemCristina.py  ProblemFusion.py  ProblemNonSeparable.py
src/runtime/: EvaluationWorker.py  Worker.py
src/solution/: SolutionBase.py  SolutionCristina.py  SolutionFusion.py  SolutionNonSeparable.py  SolutionsQueue.py
src/solvers/: SolverBase.py  SolverDAB.py  SolverSA.py
src/tests/: test_enums.py  test_parameter_vmec.py
tests/: conftest.py  test_enums.py  test_file_utils.py  test_matrix.py  test_package.py  test_parameter.py  test_parameter_additional.py  test_parameter_vmec.py  test_runtime.py  test_tail.py
(+2 files in other folders)
